kubernetes/argocd_cluster02/config/juice-shop/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 0
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: juice-shop
          image: barrosoes/juice-shop:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /rest/admin/application-version
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /rest/admin/application-version
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: logs
              mountPath: /juice-shop/logs
            - name: uploads
              mountPath: /juice-shop/uploads
            - name: data
              mountPath: /juice-shop/data
            # O app salva a foto do perfil neste path:
            - name: profile-image-uploads
              mountPath: /juice-shop/frontend/dist/frontend/assets/public/images/uploads
      volumes:
        - name: tmp
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: uploads
          emptyDir: {}
        - name: profile-image-uploads
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: juice-shop-data
