kubernetes/argocd_cluster02/config/juice-shop/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - name: http
      port: 80
      targetPort: http
