kubernetes/argocd_cluster02/config/juice-shop/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  namespace: juice-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: juiceshop.arbtech.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice-shop
                port:
                  name: http
  # tls:
  #   - hosts:
  #       - juice-shop.arbtech.com.br
  #     secretName: juice-shop-tls
